2009-08-24  Richard Guenther  <rguenther@suse.de>

PR lto/41079
	* lto-streamer-out.c (output_gimple_stmt): Only stream needed
	fields.  Do not stream pointer garbage.
	* lto-streamer-in.c (output_gimple_stmt): Adjust accordingly.
	Structure like output_gimple_stmt.  Do not needlessly zero
	fields.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/lto@151057 138bc75d-0d04-0410-961f-82ee72b054a4